--- a/resources/styles/themes/theme.css
+++ b/resources/styles/themes/theme.css
@@ -448,12 +448,27 @@ svg.svg-grid-icons {
   line-height: var(--grid-cell-height);
   font-size: var(--grid-cell-size);
   padding: var(--grid-cell-padding);
-  border: 1px solid #e2e2e2;
   border-top: none;
   position: relative;
 }
-.cell:not(:last-child) {
-  border-right: none;
+
+.cell,
+.cell_selection,
+.cell_selection-index {
+  border-top: none;
+  border-right: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  border-left: none;
+}
+.cell:first-child,
+.cell_selection:first-child,
+.cell_selection-index:first-child {
+  border-left: 1px solid #e2e2e2;
+}
+.grid__headless tr:first-child .cell,
+.grid__headless tr:first-child .cell_selection,
+.grid__headless tr:first-child .cell_selection-index {
+  border-top: 1px solid #e2e2e2;
 }
 
 .cell.editor {
@@ -558,7 +573,20 @@ tr:hover .cell_selection-index {
   font-size: var(--grid-checkbox-icon-size);
   width: var(--grid-checkbox-size);
   height: var(--grid-checkbox-size);
-  margin: 0 auto;
+  /* for chrome margin: 0 auto align broke border for cell_selection column, for IE top is not applied */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cell .checkbox,
+  .cell_selection-index > .checkbox,
+  .cell_selection > .checkbox {
+    position: static;
+    margin: 0 auto;
+    transform: translate(0px, 0px);
+  }
 }
 
 .cell .input {
@@ -569,7 +597,6 @@ tr:hover .cell_selection-index {
   padding: 0 5px;
   color: var(--grid-selection-color);
   background-color: var(--grid-selection-bg);
-  border: 1px solid #e2e2e2;
   border-top: none;
   white-space: nowrap;
   position: sticky;
